--- a/config/templates/audition_management/dashboard.html
+++ b/config/templates/audition_management/dashboard.html
@@ -4,6 +4,7 @@
 {% block title %}AuditionMe!{% endblock %}
 
 {% block content %}
+<div id="jsonData" js-data="{{some_django_variable}}"></div>
 <div class="row">
     <div class="col-sm-12">
         <div class='wrapper' style="height: 70%">
@@ -33,6 +34,8 @@
 {% block js %}
 <script type="text/javascript">
     $(function() {
+        var unparsed = $("#jsonData").attr("js-data")
+        parsed = processJS(unparsed)    
          $("#results").floatThead({
             scrollContainer: function($table){
                 return $table.closest('.wrapper');
