--- a/config/templates/audition_management/dashboard.html
+++ b/config/templates/audition_management/dashboard.html
@@ -5,6 +5,7 @@
 
 {% block content %}
 <div id="jsonData" js-data="{{some_django_variable}}"></div>
+<div id="filterDiv">
 <div class = "row">
     <div class = "col-sm-6">
         <div class = "panel panel-default">
@@ -27,16 +28,7 @@
         <div class = "panel panel-default">
             <div class="panel-heading">Filter by Tag</div>
             <div class="panel-body">
-                <form id="tag-filter">
-                    <div class="input-group">
-                        <input type="text" class="form-control" v-model="filterTag" placeholder="Enter tag to filter by">
-                        <div class="input-group-btn">
-                            <button v-on:click="getFilterTag(filterTag)" class="btn btn-primary" type="button">
-                                <i class="glyphicon glyphicon-search"></i>
-                            </button>
-                        </div>
-                    </div>
-                </form>
+                <span class="badge badge-primary" v-for="tag in tags" v-on:click="getFilterTag(tag)">(( tag ))</span>
             </div>
         </div>
     </div>
@@ -86,7 +78,9 @@
                     </tr>
                 </tbody>
             </table>
+        </div>
     </div>
+</div>
 </div>
 {% endblock %}
 
@@ -103,53 +97,16 @@
     }),
 
     $(function() {
-    // Vue basic setup to work with Django
-
-         textFilterApp = new Vue({
-            el: "#text-filter",
+        filterApp = new Vue({
+            el: "#filterDiv",
             delimiters: ["((","))"],
             // This is data that needs to be 2 way bound (such as the filter input)
             // These cannot be set to undefined/null. 
             data: {
                 filterText: "",
-            },
-
-            methods: {
-                getFilterText: function(filterText) {
-                    if (event) {
-                        textFilterApp.filterText = filterText;
-                        console.log(textFilterApp.filterText);
-                    }
-                }
-            }
-        }),
-
-         tagFilterApp = new Vue({
-            el: "#tag-filter",
-            delimiters: ["((","))"],
-            // This is data that needs to be 2 way bound (such as the filter input)
-            // These cannot be set to undefined/null. 
-            data: {
-                filterTag: "",
-            },
-
-            methods: {
-                getFilterTag: function(filterTag) {
-                    if (event) {
-                        tagFilterApp.filterTag = filterTag;
-                        console.log(tagFilterApp.filterTag);
-                    }
-                }
-            }
-        }),
-
-         dateFilterApp = new Vue({
-            el: "#date-filter",
-            delimiters: ["((","))"],
-            // This is data that needs to be 2 way bound (such as the filter input)
-            // These cannot be set to undefined/null. 
-            data: {
+                filterTags: [],
                 filterDate: "",
+                tags: ["Male", "Female", "Blonde", "Brunette", "Redhead", "TAGS", "N'", "SHIT"],
             },
             mounted: function() {
                 $('#datetimepicker1').datetimepicker();
@@ -170,6 +127,40 @@
                     console.log("Vue data object follows:");
                     console.log(internalApp.filterDate)
                 });
+            },
+            methods: {
+                getFilterText: function(filterText) {
+                    if (event) {
+                        filterApp.filterText = filterText;
+                        console.log(filterApp.filterText);
+                    }
+                },
+
+                getFilterTag: function(filterTag) {
+                    if (event) {
+                        var found = 0;
+                        for (i = 0; i < filterApp.filterTags.length; i++) {
+                            if (filterApp.filterTags[i] == filterTag) {
+                                if (i != filterApp.filterTags.length - 1) {
+                                    var temp = filterApp.filterTags[filterApp.filterTags.length - 1];
+                                    filterApp.filterTags[filterApp.filterTags.length - 1] = filterApp.filterTags[i];
+                                    filterApp.filterTags[i] = temp;
+                                    filterApp.filterTags.pop();
+                                    found = 1;
+                                    break;
+                                }
+                                else {
+                                    filterApp.filterTags.pop();
+                                    found = 1;
+                                }
+                            }
+                        }
+                        if (found == 0) {
+                            filterApp.filterTags.push(filterTag);
+                        }
+                        console.log(filterApp.filterTags);
+                    }
+                },
             },
         })
     })
