--- a/config/templates/audition_management/dashboard.html
+++ b/config/templates/audition_management/dashboard.html
@@ -9,13 +9,13 @@
 <div class = "row">
     <div class = "col-sm-6">
         <div class = "panel panel-default">
-            <div class="panel-heading">Filter by Text</div>
+            <div class="panel-heading">Filter by Description Text</div>
             <div class="panel-body">
                 <form id="text-filter">
                     <div class="input-group">
                         <input type="text" class="form-control" v-model="filterText" placeholder="Enter text to filter by">
                         <div class="input-group-btn">
-                            <button v-on:click="getFilterText(filterText)" class="btn btn-primary" type="button">
+                            <button v-on:click="setFilterText(filterText)" class="btn btn-primary" type="button">
                                 <i class="glyphicon glyphicon-search"></i>
                             </button>
                         </div>
@@ -28,7 +28,7 @@
         <div class = "panel panel-default">
             <div class="panel-heading">Filter by Tag</div>
             <div class="panel-body">
-                <span class="badge badge-primary" v-for="tag in tags" v-on:click="getFilterTag(tag)">(( tag ))</span>
+                <span class="badge badge-primary" v-for="tag in tags" v-on:click="setFilterTag(tag)">(( tag ))</span>
             </div>
         </div>
     </div>
@@ -52,7 +52,11 @@
     <div class ="col-sm-6">
         <div class = "panel panel-default">
             <div class="panel-heading">Filter by Location</div>
-            <div class="panel-body">Yeah IDK bout this one</div>
+            <div class="panel-body">Yeah IDK bout this one
+                <button v-on:click="resetFilters" class="btn btn-primary pull-right" type="button">
+                        Reset Filters
+                </button>
+            </div>
         </div>
     </div>
 </div>
@@ -63,18 +67,22 @@
                 <thead>
                     <tr style="background-color:white;">
                         <th>Role</th>
+                        <th>Casting Agent</th>
+                        <th>Date</th>
                         <th>Tags</th>
+                        <th>Location</th>
                         <th>&nbsp;</th>
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
-                        <td>Example</td>
-                        <td><span class="badge badge-primary">TAGS</span>
-                        <span class="badge badge-primary">N'</span>
-                        <span class="badge badge-primary">SHIT</span>
+                    <tr v-for="role in displayedRoles">
+                        <td>(( role.role.description ))</td>
+                        <td>(( role.agent ))</td>
+                        <td>(( role.role.date ))</td>
+                        <td><span class="badge badge-primary" v-for="tag in role.tags">(( tag ))</span>
                         </td>
-                        <td><button class="btn btn-primary btn-sm">View</button></td>
+                        <td>(( role.role.address ))</td>
+                        <td><button class="btn btn-primary btn-sm pull-right">View</button></td>
                     </tr>
                 </tbody>
             </table>
@@ -107,37 +115,125 @@
                 filterTags: [],
                 filterDate: "",
                 tags: ["Male", "Female", "Blonde", "Brunette", "Redhead", "TAGS", "N'", "SHIT"],
+                displayedRoles: [],
+                allRoles: [],
             },
             mounted: function() {
-                $('#datetimepicker1').datetimepicker();
                 // we save the 'this' keyword here because once we enter the next scope
                 // 'this' will become the jQuery object $("#datetimepicker1") so
                 // in order to access the app, we save it to a local variable
                 var internalApp = this;
-    
+
+                //sample roles
+                var sample1 =  {
+                    "role": {
+                        "date": "2018-02-11",
+                        "description": "Lorem Impsum",
+                        "domain": 0,
+                        "address": "111 Example St.",
+                    },
+                    "agent": "John Smith",
+                    "events": [],
+                    "tags": ["Male"]
+                }
+
+                var sample2 =  {
+                    "role": {
+                        "date": "2018-02-15",
+                        "description": "Different Description",
+                        "domain": 0,
+                        "address": "112 Example St.",
+                    },
+                    "agent": "Johnny Smith",
+                    "events": [],
+                    "tags": ["Female", "Blonde", "TAGS"]
+                }
+
+                var sample3 =  {
+                    "role": {
+                        "date": "2018-02-11",
+                        "description": "Imp yo",
+                        "domain": 0,
+                        "address": "113 Example St.",
+                    },
+                    "agent": "Harold Kumar",
+                    "events": [],
+                    "tags": ["Male", "Brunette", "N'"]
+                }
+                internalApp.displayedRoles.push(sample1);
+                internalApp.displayedRoles.push(sample2);
+                internalApp.displayedRoles.push(sample3);
+                internalApp.allRoles = internalApp.displayedRoles.slice();
+
+                //sort the list of tags
+                internalApp.tags.sort();
+
+
+                $('#datetimepicker1').datetimepicker();
+                
                 // Eonasdan does not support Vue out of the box, so we use jQuery event handler
                 // catching the custom event from Eonasdan's API. 
                 $('#datetimepicker1').on('dp.change', function() {
                     // get the date object in MomentJS Date Object format
                     var momentJSDateObj = $('#datetimepicker1').data('DateTimePicker').date();
+                    //reset the other two filter types so that we only have one type of filter
+                    internalApp.filterText = "";
+                    internalApp.filterTags = [];
+
+                    //temp storage to eventually become the displayedRoles
+                    var filteredRoles = [];
+
+                    //filter the displayed roles based on the filterText
+                    for (i = 0; i < filterApp.allRoles.length; i++) {
+                        if (filterApp.allRoles[i].role.date == momentJSDateObj.format('YYYY-MM-DD')) {
+                            filteredRoles.push(filterApp.allRoles[i]);
+                        }
+                    }
+
+                    //set the displayedRoles to our filtered roles
+                    filterApp.displayedRoles = filteredRoles;
+
                     // example of how to convert it to string
                     console.log(momentJSDateObj.format('YYYY-MM-DD'));
+
+
                     // saving it to Vue
-                    internalApp.filterDate = momentJSDateObj;
+                    internalApp.filterDate = momentJSDateObj.format('YYYY-MM-DD');
                     console.log("Vue data object follows:");
                     console.log(internalApp.filterDate)
                 });
             },
             methods: {
-                getFilterText: function(filterText) {
+                setFilterText: function(filterText) {
                     if (event) {
+                        //update the text to filter by
                         filterApp.filterText = filterText;
                         console.log(filterApp.filterText);
+
+                        //reset the other two filter types so that we only have one type of filter
+                        filterApp.filterTags = [];
+                        filterApp.filterDate = "";
+
+                        //temp storage to eventually become the displayedRoles
+                        var filteredRoles = [];
+
+                        //filter the displayed roles based on the filterText
+                        for (i = 0; i < filterApp.allRoles.length; i++) {
+                            if (filterApp.allRoles[i].role.description.toLowerCase().indexOf(filterText.toLowerCase()) != -1) {
+                                filteredRoles.push(filterApp.allRoles[i]);
+                            }
+                        }
+
+                        //set the displayedRoles to our filtered roles
+                        filterApp.displayedRoles = filteredRoles;
                     }
                 },
 
-                getFilterTag: function(filterTag) {
+                setFilterTag: function(filterTag) {
                     if (event) {
+
+                        //search for the tag in the already selected tags
+                        //if the tag already exists, remove it from the list
                         var found = 0;
                         for (i = 0; i < filterApp.filterTags.length; i++) {
                             if (filterApp.filterTags[i] == filterTag) {
@@ -155,12 +251,59 @@
                                 }
                             }
                         }
+                        //if the tag was not found, add it to the list
                         if (found == 0) {
                             filterApp.filterTags.push(filterTag);
                         }
-                        console.log(filterApp.filterTags);
+
+                        //sort the list of tags
+                        filterApp.tags.sort();
+
+                        //temp storage to eventually become the displayedRoles
+                        var filteredRoles = [];
+
+                        //to find matching roles
+                        var matched = 0;
+                        var hasTags = 0;
+
+                        //filter the roles
+                        for (i = 0; i < filterApp.allRoles.length; i++) {
+                            for (j = 0; j < filterApp.filterTags.length; j++) {
+                                hasTags = 1; //role has tags
+
+                                //if one of the tags doesnt match, update the flag
+                                if (filterApp.allRoles[i].tags.indexOf(filterApp.filterTags[j]) != -1) {
+                                    matched++;
+                                }
+                            }
+                            //if role has all required tags, add it to list
+                            if (matched == filterApp.filterTags.length && hasTags == 1) {
+                                filteredRoles.push(filterApp.allRoles[i]);
+                            }
+                            matched = 0;
+                            hasTags = 0;
+                        }
+
+                        //set the displayedRoles to our filtered roles
+                        if (filterApp.filterTags.length != 0) {
+                            filterApp.displayedRoles = filteredRoles;
+                        }
+                        else {
+                            filterApp.displayedRoles = filterApp.allRoles;
+                        }
+
+                        //reset the other two filter types so that we only have one type of filter
+                        filterApp.filterText = "";
+                        filterApp.filterDate = "";
                     }
                 },
+
+                resetFilters: function() {
+                    filterApp.filterText = "";
+                    filterApp.filterTags = [];
+                    filterApp.filterDate = "";
+                    filterApp.displayedRoles = filterApp.allRoles;
+                }
             },
         })
     })
