--- a/config/templates/audition_management/role.html
+++ b/config/templates/audition_management/role.html
@@ -9,13 +9,32 @@
 	      <div class="row">
 	        <div class="col-sm-offset-3 col-sm-6">
 	          <div class="panel panel-primary">
-	            <div class="panel-heading">
-	              <h2 class='text-center'>Role Info</h2>
+	            <div class="panel-heading" v-model="currentRole">
+	              <h2 class='text-center'> ((currentRole.role.name)) </h2>
 	            </div>
-	            <div class="panel-body">
-	              <div class="text-center">
-	                <button type="submit" class="btn btn-primary text">Schedule Audition</button>
-	              </div>
+	            <div class="panel-body" v-model="currentRole" v-model="domain">
+	            	<span class="badge badge-info pull-right" v-for="tag, in ((currentRole.tags))">
+	     				((tag))
+	            	</span>
+	            	<br>
+	            	<br>
+	            	<h5> Casting Agent: ((currentRole.role.agent))</h5>
+	            	<h5> Role Type: ((domain)) </h5>
+	            	<h5> Studio Address: ((currentRole.role.address))</h5>
+	            	<br>
+	            	<h5> Description</h5>
+	            	<div class="well" style="max-height: 300px; overflow-y:scroll;">((currentRole.role.description))</div>
+	            	<h5> Events</h5>
+	            	<div class="well" style="max-height: 300px; overflow-y:scroll;">
+		            	<ul>
+		            		<li v-for="event, in ((currentRole.events))">
+		     					((event.name)): ((event.date))
+		            		</li>
+		            	</ul>
+		            </div>
+	              	<div class="text-center">
+	                	<button type="submit" class="btn btn-primary text">Schedule Audition</button>
+	              	</div>
 	            </div>
 	          </div>
 	        </div>
@@ -31,16 +50,33 @@
 	var unparsed = "{{role}}"
 	 $(function() {
 	 	unparsed = unparsed.split("&#39;").join("\"").split("&quot;").join("")
-	 	console.log(unparsed)
-        parsed = processJS(unparsed)    
+        parsed = JSON.parse(unparsed) 
 
 	    roleApp = new Vue({
 	        el: "#roleDiv",
 	        delimiters: ["((","))"],
 	        data: {
+	        	currentRole: "",
+	        	domain: "",
 	        },
 	        mounted: function() {
-	        	
+	        	this.currentRole = parsed;
+
+	        	//set the domain text for the role
+	        	switch(this.currentRole.role.domain) {
+	        		case 0: this.domain = "General Acting";
+	        			break;
+	        		case 1: this.domain = "Voice Acting";
+	        			break;
+	        		case 2: this.domain = "Stage Acting";
+	        			break;
+	        		case 3: this.domain = "Special Effects";
+	        			break;
+	        		case 4: this.domain = "Stage Crew";
+	        			break;
+	        		case 5: this.domain = "Other";
+	        			break;
+	        	}
 	        },
 	        methods: {
 	        
