--- a/config/templates/session/settings.html
+++ b/config/templates/session/settings.html
@@ -8,16 +8,18 @@
     <div class="col-lg-12">
         <div class="panel panel-primary">
             <div class="panel-heading filter-collapsed-bar">
-                <div class="col-lg-10">
-                    <h4>Account Information Area</h4><br>
-                    <span>Account Type: {{ account_type }}</span>
-                </div>
-                <div class="col-lg-2">
-                     <i class="fa fa-chevron-down fa-2x" aria-hidden="true"></i>
-                    <i class="fa fa-chevron-up fa-2x" style="display:none;" aria-hidden="true"></i>
+                <div class="row">   
+                    <div class="col-lg-11">
+                        <h4>Account Information Area</h4>
+                    </div>
+                    <div class="col-lg-1">
+                        <i class="fa fa-chevron-down fa-2x" style="display:none;" aria-hidden="true"></i>
+                        <i class="fa fa-chevron-up fa-2x"  aria-hidden="true"></i>
+                    </div>
                 </div>
             </div>
             <div class="panel-body">
+                <span>Account Type: {{ account_type }}</span>
                 <div class="row">
                     <div class="col-lg-9">
                         <div class="row">
@@ -106,16 +108,116 @@
             </div>
         </div>
     </div>
+</div>
+<div class="row">
+    <div class="col-lg-12">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h4>Postings</h4>
+            </div>
+            <div class="panel-body">
+                <div id="filterDiv">
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <div class="panel panel-info">
+                                <div class="panel-heading filter-collapsed-bar-2">
+                                    <div class="row">
+                                        <div class="col-lg-11">
+                                            Filter Options
+                                        </div>
+                                        <div class="col-lg-1">
+                                            <i class="fa fa-chevron-down fa-2x 2-down" style="display:none;" aria-hidden="true"></i>
+                                            <i class="fa fa-chevron-up fa-2x 2-up"  aria-hidden="true"></i>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="panel-body">
+                                    <div class="form-horizontal">
+                                        <div class="form-group">
+                                            <div class="col-lg-6">
+                                                <label for="title" class="control-label">Title</label>
+                                                <div class="input-group">
+                                                    <input id="title" type="text" class="form-control" v-model="filterText" placeholder="Enter text to filter by">
+                                                    <div class="input-group-btn">
+                                                        <button v-on:click="setFilterText(filterText)" class="btn btn-primary" type="button">
+                                                            <i class="glyphicon glyphicon-search"></i>
+                                                        </button>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="col-lg-6">
+                                                <label for="tagSelect" class="control-label">Tags</label>
+                                                 <select class="form-control" style="width:100%" id="tagSelect" multiple>
+                                                    <option v-for="tag, index in tags" v-bind:value="tag">
+                                                        (( tag ))
+                                                    </option>
+                                                </select>
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <div class="col-lg-6">
+                                                <label for="datetimepicker1" class="control-label">Date</label>
+                                                <div class='input-group date' id='datetimepicker1'>
+                                                    <input type='text' class="form-control" v-model="filterDate" />
+                                                    <span class="input-group-addon">
+                                                        <span class="glyphicon glyphicon-calendar"></span>
+                                                    </span>
+                                                </div>
+                                            </div>
+                                            <div class="col-lg-6">
+                                                {% comment %}
+                                                 <!-- eventually location filtering will be here -->
+                                                {% endcomment %}
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-12">
+                            <div class='wrapper' style="height: 500px">
+                                <table id="roles" class="table table-hover table-striped">
+                                    <thead>
+                                        <tr style="background-color:white;">
+                                            <th>Role</th>
+                                            <th>Casting Agent</th>
+                                            <th>Date</th>
+                                            <th>Tags</th>
+                                            <th>Location</th>
+                                            <th>&nbsp;</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr v-for="role in displayedRoles">
+                                            <td>(( role.role.name ))</td>
+                                            <td>(( role.role.agent ))</td>
+                                            <td>(( role.role.date ))</td>
+                                            <td><span class="badge badge-primary" v-for="tag in role.tags">(( tag ))</span>
+                                            </td>
+                                            <td>(( role.role.address ))</td>
+                                            <td>
+                                                <a v-bind:href="setUrl(role.role.id)" class="btn btn-primary btn-sm pull-right">Edit</a>
+                                            </td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
-<div>
    
 </div>
 {% endblock %}
 
 {% block js %}
 <script type="text/javascript">
-    $(".filter-collapsed").click(function () {
+    $(".filter-collapsed-bar").click(function () {
 
         $header = $(".filter-collapsed-bar");
         $content = $header.next();
@@ -133,7 +235,25 @@
 
 
         });
+    });
+    $(".filter-collapsed-bar-2").click(function () {
 
+        $header = $(".filter-collapsed-bar-2");
+        $content = $header.next();
+
+        $content.slideToggle(500, function () {
+
+                if ($content.is(":visible")) {
+                        $(".2-up").css("display","inline-block");
+                        $(".2-down").css("display", "none");
+                }
+                else {
+                        $(".2-up").css("display", "none");
+                        $(".2-down").css("display","inline-block");
+                }
+
+
+        });
     });
     confirm = function() {
         $.confirm({
@@ -157,5 +277,144 @@
                 }
             });
     }
+    var unparsed = "{{roles}}"
+    $(function() {
+        unparsed = unparsed.split("&#39;").join("\"").split("&quot;").join("")
+        parsed = processJS(unparsed)    
+         $("#results").floatThead({
+            scrollContainer: function($table){
+                return $table.closest('.wrapper');
+            }
+        });
+         setTimeout(function() {
+            $("#tagSelect").select2();
+        }, 100);
+        filterApp = new Vue({
+            el: "#filterDiv",
+            delimiters: ["((","))"],
+            // This is data that needs to be 2 way bound (such as the filter input)
+            // These cannot be set to undefined/null. 
+            data: {
+                filterText: "",
+                filterTags: [],
+                filterDate: "",
+                tags: [],
+                displayedRoles: [],
+                allRoles: [],
+                url: "{% url 'audition_management:edit-role' pk=0 %}",
+            },
+            mounted: function() {
+                // we save the 'this' keyword here because once we enter the next scope
+                // 'this' will become the jQuery object $("#datetimepicker1") so
+                // in order to access the app, we save it to a local variable
+                var internalApp = this;
+                this.allRoles = parsed
+                this.displayedRoles = this.allRoles
+                for (var x = 0; x < parsed.length; x++) {
+                    for (var y = 0; y < parsed[x].tags.length; y++) {
+                        this.tags.push(parsed[x].tags[y])
+                    }
+                }
+                $("#tagSelect").on("change", function() {
+                    internalApp.tagFilter($("#tagSelect").val())
+                })
+                $('#datetimepicker1').datetimepicker({
+                    "icons": {
+                        "date": "glyphicon glyphicon-time",
+                        "up": "fa fa-arrow-up",
+                        "down": "fa fa-arrow-down"
+                    }
+                });
+                
+                // Eonasdan does not support Vue out of the box, so we use jQuery event handler
+                // catching the custom event from Eonasdan's API. 
+                $('#datetimepicker1').on('dp.change', function() {
+                    // get the date object in MomentJS Date Object format
+                    var momentJSDateObj = $('#datetimepicker1').data('DateTimePicker').date();
+                    //reset the other two filter types so that we only have one type of filter
+                    internalApp.filterText = "";
+                    internalApp.filterTags = [];
+
+                    //temp storage to eventually become the displayedRoles
+                    var filteredRoles = [];
+
+                    //filter the displayed roles based on the filterText
+                    for (i = 0; i < filterApp.allRoles.length; i++) {
+                        if (filterApp.allRoles[i].role.date == momentJSDateObj.format('YYYY-MM-DD')) {
+                            filteredRoles.push(filterApp.allRoles[i]);
+                        }
+                    }
+
+                    //set the displayedRoles to our filtered roles
+                    filterApp.displayedRoles = filteredRoles;
+
+                    // saving it to Vue
+                    internalApp.filterDate = momentJSDateObj.format('YYYY-MM-DD');
+                });
+            },
+            methods: {
+                setUrl: function(num) {
+                    return filterApp.url.replace("0", num)
+                },
+                setFilterText: function(filterText) {
+                    if (event) {
+                        //update the text to filter by
+                        filterApp.filterText = filterText;
+                        console.log(filterApp.filterText);
+
+                        //reset the other two filter types so that we only have one type of filter
+                        filterApp.filterTags = [];
+                        filterApp.filterDate = "";
+
+                        //temp storage to eventually become the displayedRoles
+                        var filteredRoles = [];
+
+                        //filter the displayed roles based on the filterText
+                        for (i = 0; i < filterApp.allRoles.length; i++) {
+                            if (filterApp.allRoles[i].role.name.toLowerCase().indexOf(filterText.toLowerCase()) != -1) {
+                                filteredRoles.push(filterApp.allRoles[i]);
+                            }
+                        }
+
+                        //set the displayedRoles to our filtered roles
+                        filterApp.displayedRoles = filteredRoles;
+                    }
+                },
+                tagFilter: function(selected) {
+                    console.log(selected)
+                    if (selected.length == 0) {
+                        filterApp.displayedRoles = filterApp.allRoles;
+                    }
+                    else {
+                        filterApp.displayedRoles = filterApp.allRoles.filter(function(role) {
+                            var val = false;
+                            for (var x = 0; x < selected.length; x++) {
+                                if (role.tags.indexOf(selected[x]) > -1) {
+                                    val = true;
+                                }
+                                else {
+                                    if (val) {
+                                        return false;
+                                    }
+                                }
+
+                            }
+                            return val;
+                        })
+                    }
+                },
+                resetFilters: function() {
+                    filterApp.filterText = "";
+                    filterApp.filterTags = [];
+                    filterApp.filterDate = "";
+                    filterApp.displayedRoles = filterApp.allRoles;
+                },
+
+                setUrl: function(num) {
+                    return filterApp.url.replace("0", num);
+                }
+            },
+        })
+    })
 </script>
 {% endblock js %}
